<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_background"
    tools:context=".Views.MainActivity">

    <Button
        android:id="@+id/Event_A_Button"
        android:layout_width="218dp"
        android:layout_height="59dp"
        android:background="@drawable/button_shape_to"
        android:text="@string/event_a"
        android:textColor="@color/layer1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <Button
        android:id="@+id/Event_B_Button"
        android:layout_width="218dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape_to"
        android:text="@string/event_b"
        android:textColor="@color/layer1"
        app:layout_constraintEnd_toEndOf="@+id/Event_A_Button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Event_A_Button"
        app:layout_constraintTop_toBottomOf="@+id/Event_A_Button" />

    <Button
        android:id="@+id/Event_C_Button"
        android:layout_width="218dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape_to"
        android:text="@string/event_c"
        android:textColor="@color/layer1"
        app:layout_constraintEnd_toEndOf="@+id/Event_B_Button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Event_B_Button"
        app:layout_constraintTop_toBottomOf="@+id/Event_B_Button" />

    <Button
        android:id="@+id/Show_My_Count"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_to"
        android:text="@string/show_my_counts"
        android:textColor="@color/layer1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/Setting_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_to"
        android:text="@string/settings"
        android:textColor="@color/layer1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        android:id="@+id/Total_Count"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/total_count"
        android:textColor="@color/layer1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Event_C_Button"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/Event_C_Button"
        app:layout_constraintTop_toBottomOf="@+id/Event_C_Button"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="242dp"
        android:layout_height="334dp"
        android:layout_marginTop="484dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngegg" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="208dp"
        android:layout_height="466dp"
        android:layout_marginBottom="276dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image2" />

</androidx.constraintlayout.widget.ConstraintLayout>